lycanites mobs stats adjust + summon costs, food buffs

--- a/config/MoCreatures/MoCSettings.cfg
+++ b/config/MoCreatures/MoCSettings.cfg
@@ -69,7 +69,7 @@ global-settings {
     B:debug=true
 
     # Shows Pet Health
-    B:displayPetHealth=true
+    B:displayPetHealth=false
 
     # Shows Pet Emotes
     B:displayPetIcons=true
@@ -107,7 +107,7 @@ monster-general-settings {
     D:OgreStrength=2.5
 
     # Allows Big Golems to break blocks.
-    B:golemDestroyBlocks=true
+    B:golemDestroyBlocks=false
 }
 
 
