--- a/config/infernalmobs.cfg
+++ b/config/infernalmobs.cfg
@@ -7,6 +7,7 @@ entitiesalwaysinfernal {
     B:BoundSoulEntity=false
     B:CaveSpider=false
     B:Creeper=false
+    B:Cyclops=false
     B:ElderGuardian=false
     B:Enderman=false
     B:EntityAmalgalich=false
@@ -225,6 +226,7 @@ entitiesalwaysinfernal {
     B:"mocreatures:wwolf"=false
     B:naga=false
     B:pirate_mimic=false
+    B:"quark:Pirate"=false
     B:"quark:ashen"=false
     B:"quark:dweller"=false
     B:"quark:pirate"=false
@@ -253,10 +255,14 @@ entitiesalwaysinfernal {
 
 entitybasehealth {
     D:AS_EntityGolem=250.0
+    D:Barakoana=10.0
+    D:Barakoaya=10.0
     D:"Battletower Golem"=216.10733032226562
     D:BoundSoulEntity=43.78858184814453
+    D:Bound_Soul=39.69782257080078
     D:CaveSpider=26.169307708740234
     D:Creeper=20.0
+    D:Cyclops=218.91790771484375
     D:Enderman=48.37158966064453
     D:EntityAmalgalich=4402.697265625
     D:EntityAshen=20.0
@@ -382,10 +388,7 @@ entitybasehealth {
     D:Zombie=20
     D:ZombieVillager=20.0
     D:barakoan_barakoana=20.842906951904297
-    D:barakoana=10.0
-    D:barakoaya=10.0
-    D:bound_soul=39.69782257080078
-    D:cyclops=218.91790771484375
+    D:bound_soul=31.020423889160156
     D:defiledlands.host=37.345802307128906
     D:defiledlands.shambler=40.0
     D:defiledlands.slime_defiled=1.0
@@ -417,6 +420,7 @@ entitybasehealth {
     D:"mocreatures:wraith"=10.0
     D:"mocreatures:wwolf"=15.0
     D:pirate_mimic=35.0
+    D:"quark:Pirate"=20.0
     D:"quark:ashen"=20.0
     D:"quark:dweller"=20.0
     D:"quark:pirate"=20.0
@@ -482,6 +486,7 @@ permittedentities {
     B:BoundSoulEntity=true
     B:CaveSpider=true
     B:Creeper=true
+    B:Cyclops=false
     B:ElderGuardian=true
     B:Enderman=true
     B:EntityAmalgalich=false
@@ -656,7 +661,7 @@ permittedentities {
     B:bound_soul=true
     B:calpod=true
     B:cryptkeeper=true
-    B:cyclops=false
+    B:cyclops=true
     B:defiledlands.host=true
     B:defiledlands.scuttler=true
     B:defiledlands.shambler=true
@@ -671,7 +676,7 @@ permittedentities {
     B:"ebwizardry:evil_wizard"=true
     B:"ebwizardry:remnant"=true
     B:ettin=true
-    B:ferrous_wroughtnaut=true
+    B:ferrous_wroughtnaut=false
     B:foliaath=true
     B:frostmaw=true
     B:geist=true
@@ -700,6 +705,7 @@ permittedentities {
     B:"mocreatures:wwolf"=true
     B:naga=true
     B:pirate_mimic=true
+    B:"quark:Pirate"=true
     B:"quark:ashen"=true
     B:"quark:dweller"=true
     B:"quark:pirate"=true
