--- a/config/lycanitesmobs/general.cfg
+++ b/config/lycanitesmobs/general.cfg
@@ -85,7 +85,7 @@ beastiary {
 
 bosses {
     # Caps how much damage a boss can take per tick, this also affects Rare Variants and Dungeon Bosses. Set to 0 to disable the cap.
-    I:"Boss Damage Cap"=50
+    I:"Boss Damage Cap"=100
     D:"How much higher players must be relative to a boss' y position (feet) to trigger anti flight measures."=5.0
 }
 
@@ -110,7 +110,7 @@ client {
     B:"Model Multipass"=true
 
     # If true, all mobs that are a subspecies will always show their nametag.
-    B:"Subspecies Tags"=true
+    B:"Subspecies Tags"=false
 }
 
 
@@ -381,25 +381,25 @@ gui {
 
 "mob interaction" {
     # If true, passive mobs will fight back when hit instead of running away.
-    B:"Animals Fight Back"=false
+    B:"Animals Fight Back"=true
 
     # If true, when a mob picks up a player, the player will be positioned where the mob is rather than offset to where the mob is holding the player at.
     B:"Disable Pickup Offset"=false
 
     # The level of a mob created via fusion is multiplied by this value, set to 1 for no changes. Tamed fusions aren't multiplied by this value.
-    B:"Elemental Fusion"=10.0
+    B:"Elemental Fusion"=1.0
 
     # If true, all mobs will be immune to damage from running out of air (drown damage).
     B:"Global Drown Immunity"=false
 
     # If true, all mobs will be immune to suffocation (inWall) damage.
-    B:"Global Suffocation Immunity"=false
+    B:"Global Suffocation Immunity"=true
 
     # Set to false to prevent mobs that attack players from also attacking villagers.
     B:"Mobs Attack Villagers"=true
 
     # If true, mobs can be lured with treats even if they are in a pack.
-    B:"Pack Treat Luring"=false
+    B:"Pack Treat Luring"=true
 
     # Set to false to prevent predator mobs from attacking animals/farmable mobs.
     B:"Predators Attack Animals"=true
@@ -416,14 +416,14 @@ gui {
     D:amplifier=0.01
     D:armor=0.0
     D:attackSpeed=0.01
-    D:damage=0.02
+    D:damage=0.025
     D:defense=0.01
     D:effect=0.02
-    D:health=0.1
+    D:health=0.11
     D:pierce=0.02
     D:rangedSpeed=0.01
     D:sight=0.0
-    D:speed=0.01
+    D:speed=0.02
 }
 
 
@@ -447,7 +447,7 @@ gui {
     I:"Variant Base Weight"=400
 
     # If set to true, rare subspecies such as the Lunar Grue will despawn naturally over time.
-    B:"Variant Rare Despawning"=true
+    B:"Variant Rare Despawning"=false
 
     # When a creature with the rare subspecies (Celestial, Lunar, etc) dies, its experience amount is multiplied by this value.
     D:"Variant Rare Experience Scale"=10.0
@@ -492,7 +492,7 @@ pets {
     B:"Flying Mounting"=true
 
     # How far in blocks pets stray from their owner when set to follow.
-    I:"Follow Distance"=8
+    I:"Follow Distance"=3
 
     # If true, pets, minions, etc can't harm their owners (with ranged attacks, etc).
     B:"Friendly Fire"=true
@@ -519,10 +519,10 @@ pets {
 
 player {
     # How much spirit a player regains per second. Default is 10, was 1 in earlier versions.
-    I:"Spirit Recharge"=1
+    I:"Spirit Recharge"=0.8
 
     # How much summoning focus a player regains per second. Default is 10, was 1 in earlier versions.
-    I:"Summoning Focus Recharge"=1
+    I:"Summoning Focus Recharge"=0.65
     I:"Summoning Pedestal Redstone Time"=1200
 }
 
