--- a/config/quark.cfg
+++ b/config/quark.cfg
@@ -464,7 +464,7 @@ client {
         D:Opacity=0.3333333333333333
 
         # Set this to true to only display the reds boxes when Shift is held
-        B:"Requires Shift"=true
+        B:"Requires Shift"=false
     }
 
     "enchanted books show items" {
@@ -1223,7 +1223,7 @@ misc {
 
 
 tweaks {
-    B:"Allow crafting stone tools using flint"=false
+    B:"Allow crafting stone tools using flint"=true
     B:"Armed armor stands"=true
     B:"Automatic recipe unlock"=false
     B:"Axes break leaves"=true
