--- a/config/reskillable.cfg
+++ b/config/reskillable.cfg
@@ -137,6 +137,7 @@ general {
         biomesoplenty:gem_ore:6:*=reskillable:mining|10
         biomesoplenty:gem_ore:7:*=reskillable:mining|10
         mysticalworld:copper_ore:*=reskillable:mining|2
+        forestry:resources:2:*=reskillable:mining|2
         mysticalworld:silver_ore:*=reskillable:mining|4,reskillable:magic|4
         mysticalworld:amethyst_ore:*=reskillable:mining|4,reskillable:magic|4
         thaumcraft:ore_quartz:*=reskillable:mining|4
@@ -234,6 +235,7 @@ general {
         biomesoplenty:sapling_2:5:*=reskillable:farming|2
         biomesoplenty:sapling_2:6:*=reskillable:farming|2
         biomesoplenty:sapling_2:7:*=reskillable:farming|2
+        forestry:sapling:*=reskillable:farming|2
         roots:moonglow_seed:*=reskillable:farming|6,reskillable:magic|2
         roots:spirit_herb_seed:*=reskillable:farming|6,reskillable:magic|2
         roots:wildewheet_seed:*=reskillable:farming|2
@@ -442,11 +444,11 @@ general {
         lycanitesmobs:azurecinderfallsword:*=reskillable:attack|16
         lycanitesmobs:verdantcinderfallsword:*=reskillable:attack|16
         lycanitesmobs:summoningpedestal:*=reskillable:magic|69420
-        lycanitesmobs:summoningstaff:*=reskillable:magic|12
-        lycanitesmobs:stablesummoningstaff:*=reskillable:building|6,reskillable:magic|12
-        lycanitesmobs:bloodsummoningstaff:*=reskillable:defense|6,reskillable:magic|12
-        lycanitesmobs:sturdysummoningstaff:*=reskillable:building|6,reskillable:magic|12
-        lycanitesmobs:savagesummoningstaff:*=reskillable:attack|6,reskillable:magic|12
+        lycanitesmobs:summoningstaff:*=reskillable:magic|14
+        lycanitesmobs:stablesummoningstaff:*=reskillable:magic|22
+        lycanitesmobs:bloodsummoningstaff:*=reskillable:magic|22
+        lycanitesmobs:sturdysummoningstaff:*=reskillable:magic|22
+        lycanitesmobs:savagesummoningstaff:*=reskillable:magic|22
         lycanitesmobs:frostboltscepter:*=reskillable:magic|4
         lycanitesmobs:frostwebscepter:*=reskillable:magic|4
         lycanitesmobs:tundrascepter:*=reskillable:magic|4
