--- a/config/scalinghealth/main.cfg
+++ b/config/scalinghealth/main.cfg
@@ -356,6 +356,10 @@ main {
                 twilightforest:yeti_alpha
                 twilightforest:snow_queen
                 twilightforest:minoshroom
+                iceandfire:cyclops
+                iceandfire:gorgon
+                iceandfire:firedragon
+                iceandfire:icedragon
              >
 
             # If enabled, no bosses can become blights. If you need more control, use the Blacklist instead.
@@ -368,7 +372,7 @@ main {
             B:"Blacklist All Passives"=true
 
             # Determines the chance of a mob spawning as a blight. Formula is "blightChanceMulti * currentDifficulty / maxDifficulty". Setting to 0 will disable blights. Setting to 1 will guarantee blights at max difficulty. [range: 0.0 ~ 3.4028234663852886E38, default: 0.0625]
-            S:"Blight Chance Multiplier"=0.013
+            S:"Blight Chance Multiplier"=0.0125
 
             # When an entity spawns as a blight, their calculated difficulty is multiplied by this. Higher numbers mean more health and damage! [range: 1.0 ~ 3.4028234663852886E38, default: 3.0]
             S:"Blight Difficulty Multiplier"=4.5
