--- a/config/torohealthmod.cfg
+++ b/config/torohealthmod.cfg
@@ -8,7 +8,7 @@ client {
     S:"Heal Color"=GREEN
 
     # Display Health Bars [default: HEARTS]
-    S:"Health Bar Display"=NUMERIC
+    S:"Health Bar Display"=BAR
 
     # Location of Health Bar [default: TOP LEFT]
     S:"Health Bar Position"=TOP CENTER
