--- a/config/materialchanger.cfg
+++ b/config/materialchanger.cfg
@@ -85,18 +85,23 @@ changer {
         DURABILITY;spartanweaponry:caestus;131
         DURABILITY;spartanweaponry:caestus_studded;250
         
-        ARMOR_PROTECTION;immersiveengineering:faraday_suit_head;6
-        ARMOR_PROTECTION;immersiveengineering:faraday_suit_chest;10
-        ARMOR_PROTECTION;immersiveengineering:faraday_suit_legs;9
-        ARMOR_PROTECTION;immersiveengineering:faraday_suit_feet;5
-        ARMOR_TOUGHNESS;immersiveengineering:faraday_suit_head;2
-        ARMOR_TOUGHNESS;immersiveengineering:faraday_suit_chest;2
-        ARMOR_TOUGHNESS;immersiveengineering:faraday_suit_legs;2
-        ARMOR_TOUGHNESS;immersiveengineering:faraday_suit_feet;2
+        ARMOR_PROTECTION;immersiveengineering:faraday_suit_head;5.5
+        ARMOR_PROTECTION;immersiveengineering:faraday_suit_chest;8.25
+        ARMOR_PROTECTION;immersiveengineering:faraday_suit_legs;8.25
+        ARMOR_PROTECTION;immersiveengineering:faraday_suit_feet;4.5
+        ARMOR_TOUGHNESS;immersiveengineering:faraday_suit_head;1.25
+        ARMOR_TOUGHNESS;immersiveengineering:faraday_suit_chest;1.25
+        ARMOR_TOUGHNESS;immersiveengineering:faraday_suit_legs;1.25
+        ARMOR_TOUGHNESS;immersiveengineering:faraday_suit_feet;1.25
         DURABILITY;immersiveengineering:faraday_suit_head;400
         DURABILITY;immersiveengineering:faraday_suit_chest;400
         DURABILITY;immersiveengineering:faraday_suit_legs;400
         DURABILITY;immersiveengineering:faraday_suit_feet;400
+        
+        DURABILITY;lycanitesmobs:summoningstaff;60
+        DURABILITY;lycanitesmobs:stablesummoningstaff;250
+        DURABILITY;lycanitesmobs:bloodsummoningstaff;250
+        DURABILITY;lycanitesmobs:savagesummoningstaff;250
         
         ATTACK_DAMAGE;iceandfire:dread_sword;24
         ATTACK_DAMAGE;iceandfire:dread_knight_sword;30
