--- a/config/carryon.cfg
+++ b/config/carryon.cfg
@@ -120,6 +120,7 @@ general {
             defiledlands:*
             notreepunching:fire_pit
             comforts:*
+            mocreatures:*
          >
 
         # Entities that cannot have other entities stacked on top of them
