--- a/config/infernalmobs.cfg
+++ b/config/infernalmobs.cfg
@@ -162,6 +162,7 @@ entitiesalwaysinfernal {
     B:MoCEntityWerewolf=false
     B:MoCEntityWraith=false
     B:PigZombie=false
+    B:PirateMimicEntity=false
     B:Silverfish=false
     B:Skeleton=false
     B:Slime=false
@@ -637,6 +638,7 @@ permittedentities {
     B:MoCEntityWerewolf=true
     B:MoCEntityWraith=true
     B:PigZombie=true
+    B:PirateMimicEntity=true
     B:Silverfish=true
     B:Skeleton=true
     B:Slime=true
