--- a/config/corpsecomplex.cfg
+++ b/config/corpsecomplex.cfg
@@ -23,7 +23,7 @@ effects {
     # List of effects to apply to player on respawn
     # Format: [effect] [duration(secs)] [power]
     S:"Uncurable Respawn Effects" <
-        minecraft:blindness 2 4
+        minecraft:blindness 3 4
      >
 
     ##########################################################################################################
@@ -171,6 +171,8 @@ inventory {
 
     # List of items that are always kept
     S:"Essential Items" <
+        lycanitesmobs:equipment:*
+        questbook:itemquestbook
      >
 
     # List of items that are always dropped
@@ -254,6 +256,7 @@ respawning {
 
     # A list of items to give players on respawn. The format is modid:item_name;stacksize;metadata.
     S:"Respawn Items" <
+        questbook:itemquestboo
      >
 
     # Set to true to enable a craftable return scroll that teleports players to their death location
