--- a/config/ebwizardry/ebwizardry.cfg
+++ b/config/ebwizardry/ebwizardry.cfg
@@ -989,7 +989,7 @@ spells {
     B:"ebwizardry:slime"=true
 
     # Set to false to disable this spell
-    B:"ebwizardry:slow_time"=false
+    B:"ebwizardry:slow_time"=true
 
     # Set to false to disable this spell
     B:"ebwizardry:smoke_bomb"=true
