--- a/config/ice_and_fire.cfg
+++ b/config/ice_and_fire.cfg
@@ -5,7 +5,7 @@ all {
     S:"Amphithere Attack Strength"=7.0
 
     # How fast amphitheres fly. [range: 0.0 ~ 3.0, default: 1.75]
-    S:"Amphithere Flight Speed"=1.75
+    S:"Amphithere Flight Speed"=1.75tr
 
     # Maximum amphithere health [range: 1.0 ~ 10000.0, default: 50.0]
     S:"Amphithere Max Health"=50.0
@@ -409,7 +409,7 @@ all {
     S:"Troll Attack Strength"=18.0
 
     # Maximum troll health [range: 1.0 ~ 10000.0, default: 50.0]
-    S:"Troll Max Health"=140.0
+    S:"Troll Max Health"=200.0
 
     # A double check to see if the game can spawn trolls. Higher number = lower chance to spawn. [range: 1 ~ 10000, default: 1]
     I:"Troll Spawn Check Chance"=1
