--- a/config/reskillable.cfg
+++ b/config/reskillable.cfg
@@ -43,33 +43,33 @@ general {
         minecraft:stone_sword:*=reskillable:attack|2
         minecraft:stone_pickaxe:*=reskillable:mining|2
         minecraft:stone_hoe:*=reskillable:farming|2
-        minecraft:iron_shovel:*=reskillable:gathering|8
-        minecraft:iron_axe:*=reskillable:gathering|8
-        minecraft:iron_sword:*=reskillable:attack|8
-        minecraft:iron_pickaxe:*=reskillable:mining|8
-        minecraft:iron_hoe:*=reskillable:farming|8
-        minecraft:iron_helmet:*=reskillable:defense|8,reskillable:agility|3
-        minecraft:iron_chestplate:*=reskillable:defense|8,reskillable:agility|3
-        minecraft:iron_leggings:*=reskillable:defense|8,reskillable:agility|3
-        minecraft:iron_boots:*=reskillable:defense|8,reskillable:agility|3
-        minecraft:golden_shovel:*=reskillable:gathering|2,reskillable:magic|4
-        minecraft:golden_axe:*=reskillable:gathering|2,reskillable:magic|4
-        minecraft:golden_sword:*=reskillable:attack|2,reskillable:magic|4
-        minecraft:golden_pickaxe:*=reskillable:mining|2,reskillable:magic|4
-        minecraft:golden_hoe:*=reskillable:farming|2,reskillable:magic|4
+        minecraft:iron_shovel:*=reskillable:gathering|9
+        minecraft:iron_axe:*=reskillable:gathering|9
+        minecraft:iron_sword:*=reskillable:attack|9
+        minecraft:iron_pickaxe:*=reskillable:mining|9
+        minecraft:iron_hoe:*=reskillable:farming|9
+        minecraft:iron_helmet:*=reskillable:defense|9,reskillable:agility|4
+        minecraft:iron_chestplate:*=reskillable:defense|9,reskillable:agility|4
+        minecraft:iron_leggings:*=reskillable:defense|9,reskillable:agility|4
+        minecraft:iron_boots:*=reskillable:defense|9,reskillable:agility|4
+        minecraft:golden_shovel:*=reskillable:gathering|4,reskillable:magic|12
+        minecraft:golden_axe:*=reskillable:gathering|4,reskillable:magic|12
+        minecraft:golden_sword:*=reskillable:attack|4,reskillable:magic|12
+        minecraft:golden_pickaxe:*=reskillable:mining|4,reskillable:magic|12
+        minecraft:golden_hoe:*=reskillable:farming|4,reskillable:magic|12
         minecraft:golden_helmet:*=reskillable:defense|2,reskillable:magic|4
         minecraft:golden_chestplate:*=reskillable:defense|2,reskillable:magic|4
         minecraft:golden_leggings:*=reskillable:defense|2,reskillable:magic|4
         minecraft:golden_boots:*=reskillable:defense|2,reskillable:magic|4
-        minecraft:diamond_shovel:*=reskillable:gathering|16
-        minecraft:diamond_axe:*=reskillable:gathering|16
-        minecraft:diamond_sword:*=reskillable:attack|16
-        minecraft:diamond_pickaxe:*=reskillable:mining|16
-        minecraft:diamond_hoe:*=reskillable:farming|16
-        minecraft:diamond_helmet:*=reskillable:defense|16,reskillable:agility|6
-        minecraft:diamond_chestplate:*=reskillable:defense|16,reskillable:agility|6
-        minecraft:diamond_leggings:*=reskillable:defense|16,reskillable:agility|6
-        minecraft:diamond_boots:*=reskillable:defense|16,reskillable:agility|6
+        minecraft:diamond_shovel:*=reskillable:gathering|18
+        minecraft:diamond_axe:*=reskillable:gathering|18
+        minecraft:diamond_sword:*=reskillable:attack|18
+        minecraft:diamond_pickaxe:*=reskillable:mining|18
+        minecraft:diamond_hoe:*=reskillable:farming|18
+        minecraft:diamond_helmet:*=reskillable:defense|18,reskillable:agility|10
+        minecraft:diamond_chestplate:*=reskillable:defense|18,reskillable:agility|10
+        minecraft:diamond_leggings:*=reskillable:defense|18,reskillable:agility|10
+        minecraft:diamond_boots:*=reskillable:defense|18,reskillable:agility|10
         minecraft:shears:*=reskillable:gathering|2
         minecraft:fishing_rod:*=reskillable:gathering|4
         minecraft:bow:*=reskillable:agility|2
@@ -96,18 +96,18 @@ general {
         notreepunching:knife/tin:*=reskillable:gathering|2
         notreepunching:knife/bronze:*=reskillable:gathering|6
         notreepunching:knife/gold:*=reskillable:gathering|4,reskillable:magic|2
-        notreepunching:knife/iron:*=reskillable:gathering|8
+        notreepunching:knife/iron:*=reskillable:gathering|9
         notreepunching:knife/lead:*=reskillable:gathering|3
         notreepunching:knife/steel:*=reskillable:gathering|12
-        notreepunching:knife/diamond:*=reskillable:gathering|16
+        notreepunching:knife/diamond:*=reskillable:gathering|18
         notreepunching:saw/gold:*=reskillable:gathering|4,reskillable:magic|2
         notreepunching:saw/copper:*=reskillable:gathering|2
         notreepunching:saw/tin:*=reskillable:gathering|2
         notreepunching:saw/lead:*=reskillable:gathering|4
         notreepunching:saw/bronze:*=reskillable:gathering|6
-        notreepunching:saw/iron:*=reskillable:gathering|8
+        notreepunching:saw/iron:*=reskillable:gathering|9
         notreepunching:saw/steel:*=reskillable:gathering|12
-        notreepunching:saw/diamond:*=reskillable:gathering|16
+        notreepunching:saw/diamond:*=reskillable:gathering|18
         notreepunching:mattock/copper:*=reskillable:gathering|2,reskillable:farming|2
         notreepunching:mattock/tin:*=reskillable:gathering|2,reskillable:farming|2
         notreepunching:mattock/bronze:*=reskillable:gathering|4,reskillable:farming|4
@@ -122,10 +122,10 @@ general {
         adhooks:spear_launcher:*=reskillable:agility|12
         qualitytools:reforging_station:*=reskillable:building|8
         minecraft:iron_ore:*=reskillable:mining|4
-        minecraft:gold_ore:*=reskillable:mining|2,reskillable:magic|2
-        minecraft:lapis_ore:*=reskillable:mining|4,reskillable:magic|6
-        minecraft:redstone_ore:*=reskillable:mining|6
-        minecraft:diamond_ore:*=reskillable:mining|12
+        minecraft:gold_ore:*=reskillable:mining|2,reskillable:magic|6
+        minecraft:lapis_ore:*=reskillable:mining|4,reskillable:magic|10
+        minecraft:redstone_ore:*=reskillable:mining|6,reskillable:building|6
+        minecraft:diamond_ore:*=reskillable:mining|16
         minecraft:emerald_ore:*=reskillable:mining|8
         minecraft:quartz_ore:*=reskillable:mining|4
         biomesoplenty:gem_ore:0:*=reskillable:mining|10
@@ -139,7 +139,7 @@ general {
         mysticalworld:copper_ore:*=reskillable:mining|2
         forestry:resources:2:*=reskillable:mining|2
         mysticalworld:silver_ore:*=reskillable:mining|4,reskillable:magic|4
-        mysticalworld:amethyst_ore:*=reskillable:mining|4,reskillable:magic|4
+        mysticalworld:amethyst_ore:*=reskillable:mining|4,reskillable:magic|6
         thaumcraft:ore_quartz:*=reskillable:mining|4
         thaumcraft:ore_amber:*=reskillable:mining|4,reskillable:magic|4
         thaumcraft:ore_cinnabar:*=reskillable:mining|2,reskillable:magic|2
@@ -160,10 +160,10 @@ general {
         immersiveengineering:skyhook:*=reskillable:agility|3
         immersiveengineering:tool:0:*=reskillable:building|4
         immersiveengineering:tool:1:*=reskillable:building|8
-        immersiveengineering:steel_armor_feet:*=reskillable:defense|12
-        immersiveengineering:steel_armor_head:*=reskillable:defense|12
-        immersiveengineering:steel_armor_chest:*=reskillable:defense|12
-        immersiveengineering:steel_armor_legs:*=reskillable:defense|12
+        immersiveengineering:steel_armor_feet:*=reskillable:defense|12,reskillable:agility|12
+        immersiveengineering:steel_armor_head:*=reskillable:defense|12,reskillable:agility|12
+        immersiveengineering:steel_armor_chest:*=reskillable:defense|12,reskillable:agility|12
+        immersiveengineering:steel_armor_legs:*=reskillable:defense|12,reskillable:agility|12
         immersiveengineering:faraday_suit_feet:*=reskillable:defense|10,reskillable:building|16
         immersiveengineering:faraday_suit_head:*=reskillable:defense|10,reskillable:building|16
         immersiveengineering:faraday_suit_chest:*=reskillable:defense|10,reskillable:building|16
@@ -254,24 +254,23 @@ general {
         twilightforest:twilight_sapling:9:*=reskillable:farming|18
         
         defiledlands:blastem_seed:*=reskillable:farming|8
-        minecraft:chainmail_helmet:*=reskillable:defense|3,reskillable:agility|5
-        minecraft:chainmail_chestplate:*=reskillable:defense|3,reskillable:agility|5
-        minecraft:chainmail_leggings:*=reskillable:defense|3,reskillable:agility|5
-        minecraft:chainmail_boots:*=reskillable:defense|3,reskillable:agility|5
+        minecraft:chainmail_helmet:*=reskillable:defense|3,reskillable:agility|6
+        minecraft:chainmail_chestplate:*=reskillable:defense|3,reskillable:agility|6
+        minecraft:chainmail_leggings:*=reskillable:defense|3,reskillable:agility|6
+        minecraft:chainmail_boots:*=reskillable:defense|3,reskillable:agility|6
         minecraft:leather_helmet:*=reskillable:agility|2
         minecraft:leather_chestplate:*=reskillable:agility|2
         minecraft:leather_leggings:*=reskillable:agility|2
         minecraft:leather_boots:*=reskillable:agility|2
         minecraft:iron_door:*=reskillable:building|4
         minecraft:iron_trapdoor:*=reskillable:building|4
-        roughtweaks:salve:*=reskillable:defense|2
         roughtweaks:plaster:*=reskillable:defense|2
-        roughtweaks:bandage:*=reskillable:defense|3
-        roughtweaks:medikit:*=reskillable:defense|4
-        roughtweaks:medikitenchanted:*=reskillable:defense|5,reskillable:magic|10
+        roughtweaks:bandage:*=reskillable:defense|5
+        roughtweaks:medikit:*=reskillable:defense|10
+        roughtweaks:medikitenchanted:*=reskillable:defense|18
         firstaid:plaster:*=reskillable:defense|2
-        firstaid:bandage:*=reskillable:defense|3
-        scalinghealth:healingitem:*=reskillable:defense|2
+        firstaid:bandage:*=reskillable:defense|5
+        scalinghealth:healingitem:*=reskillable:defense|5
         iceandfire:armor_silver_metal_helmet:*=reskillable:defense|4,reskillable:magic|2
         iceandfire:armor_silver_metal_chestplate:*=reskillable:defense|4,reskillable:magic|2
         iceandfire:armor_silver_metal_leggings:*=reskillable:defense|4,reskillable:magic|2
@@ -488,28 +487,28 @@ general {
         spartanweaponry:crossbow_copper:*=reskillable:attack|3,reskillable:agility|2
         spartanweaponry:longbow_tin:*=reskillable:attack|2,reskillable:agility|3
         spartanweaponry:crossbow_tin:*=reskillable:attack|3,reskillable:agility|2
-        spartanweaponry:dagger_iron:*=reskillable:agility|8
-        spartanweaponry:longsword_iron:*=reskillable:attack|8
-        spartanweaponry:katana_iron:*=reskillable:agility|8
-        spartanweaponry:saber_iron:*=reskillable:attack|8
-        spartanweaponry:rapier_iron:*=reskillable:agility|8
-        spartanweaponry:greatsword_iron:*=reskillable:attack|8
-        spartanweaponry:hammer_iron:*=reskillable:attack|8
-        spartanweaponry:warhammer_iron:*=reskillable:attack|8
-        spartanweaponry:spear_iron:*=reskillable:agility|8
-        spartanweaponry:halberd_iron:*=reskillable:agility|8
-        spartanweaponry:pike_iron:*=reskillable:attack|8
-        spartanweaponry:lance_iron:*=reskillable:attack|8
-        spartanweaponry:longbow_iron:*=reskillable:attack|4,reskillable:agility|8
-        spartanweaponry:crossbow_iron:*=reskillable:attack|8,reskillable:agility|4
-        spartanweaponry:throwing_knife_iron:*=reskillable:agility|8
-        spartanweaponry:throwing_axe_iron:*=reskillable:agility|8
-        spartanweaponry:javelin_iron:*=reskillable:agility|8
-        spartanweaponry:boomerang_iron:*=reskillable:agility|8
-        spartanweaponry:battleaxe_iron:*=reskillable:attack|8
-        spartanweaponry:mace_iron:*=reskillable:attack|8
-        spartanweaponry:glaive_iron:*=reskillable:attack|8
-        spartanweaponry:staff_iron:*=reskillable:agility|8
+        spartanweaponry:dagger_iron:*=reskillable:agility|9
+        spartanweaponry:longsword_iron:*=reskillable:attack|9
+        spartanweaponry:katana_iron:*=reskillable:agility|9
+        spartanweaponry:saber_iron:*=reskillable:attack|9
+        spartanweaponry:rapier_iron:*=reskillable:agility|9
+        spartanweaponry:greatsword_iron:*=reskillable:attack|9
+        spartanweaponry:hammer_iron:*=reskillable:attack|9
+        spartanweaponry:warhammer_iron:*=reskillable:attack|9
+        spartanweaponry:spear_iron:*=reskillable:agility|9
+        spartanweaponry:halberd_iron:*=reskillable:agility|9
+        spartanweaponry:pike_iron:*=reskillable:attack|9
+        spartanweaponry:lance_iron:*=reskillable:attack|9
+        spartanweaponry:longbow_iron:*=reskillable:attack|4,reskillable:agility|9
+        spartanweaponry:crossbow_iron:*=reskillable:attack|9,reskillable:agility|4
+        spartanweaponry:throwing_knife_iron:*=reskillable:agility|9
+        spartanweaponry:throwing_axe_iron:*=reskillable:agility|9
+        spartanweaponry:javelin_iron:*=reskillable:agility|9
+        spartanweaponry:boomerang_iron:*=reskillable:agility|9
+        spartanweaponry:battleaxe_iron:*=reskillable:attack|9
+        spartanweaponry:mace_iron:*=reskillable:attack|9
+        spartanweaponry:glaive_iron:*=reskillable:attack|9
+        spartanweaponry:staff_iron:*=reskillable:agility|9
         spartanweaponry:dagger_steel:*=reskillable:agility|12
         spartanweaponry:longsword_steel:*=reskillable:attack|12
         spartanweaponry:katana_steel:*=reskillable:agility|12
@@ -720,28 +719,28 @@ general {
         spartanweaponry:glaive_gold:*=reskillable:attack|2,reskillable:magic|4
         spartanweaponry:staff_gold:*=reskillable:agility|2,reskillable:magic|4
         spartanweaponry:crossbow_gold:*=reskillable:attack|2,reskillable:magic|2
-        spartanweaponry:dagger_diamond:*=reskillable:agility|16
-        spartanweaponry:longsword_diamond:*=reskillable:attack|16
-        spartanweaponry:katana_diamond:*=reskillable:agility|16
-        spartanweaponry:saber_diamond:*=reskillable:attack|16
-        spartanweaponry:rapier_diamond:*=reskillable:agility|16
-        spartanweaponry:greatsword_diamond:*=reskillable:attack|16
-        spartanweaponry:hammer_diamond:*=reskillable:attack|16
-        spartanweaponry:warhammer_diamond:*=reskillable:attack|16
-        spartanweaponry:spear_diamond:*=reskillable:agility|16
-        spartanweaponry:halberd_diamond:*=reskillable:agility|16
-        spartanweaponry:pike_diamond:*=reskillable:attack|16
-        spartanweaponry:lance_diamond:*=reskillable:attack|16
-        spartanweaponry:longbow_diamond:*=reskillable:attack|8,reskillable:agility|16
-        spartanweaponry:crossbow_diamond:*=reskillable:attack|16,reskillable:agility|8
-        spartanweaponry:throwing_knife_diamond:*=reskillable:agility|16
-        spartanweaponry:throwing_axe_diamond:*=reskillable:agility|16
-        spartanweaponry:javelin_diamond:*=reskillable:agility|16
-        spartanweaponry:boomerang_diamond:*=reskillable:agility|16
-        spartanweaponry:battleaxe_diamond:*=reskillable:attack|16
-        spartanweaponry:mace_diamond:*=reskillable:attack|16
-        spartanweaponry:glaive_diamond:*=reskillable:attack|16
-        spartanweaponry:staff_diamond:*=reskillable:agility|16
+        spartanweaponry:dagger_diamond:*=reskillable:agility|18
+        spartanweaponry:longsword_diamond:*=reskillable:attack|18
+        spartanweaponry:katana_diamond:*=reskillable:agility|18
+        spartanweaponry:saber_diamond:*=reskillable:attack|18
+        spartanweaponry:rapier_diamond:*=reskillable:agility|18
+        spartanweaponry:greatsword_diamond:*=reskillable:attack|18
+        spartanweaponry:hammer_diamond:*=reskillable:attack|18
+        spartanweaponry:warhammer_diamond:*=reskillable:attack|18
+        spartanweaponry:spear_diamond:*=reskillable:agility|18
+        spartanweaponry:halberd_diamond:*=reskillable:agility|18
+        spartanweaponry:pike_diamond:*=reskillable:attack|18
+        spartanweaponry:lance_diamond:*=reskillable:attack|18
+        spartanweaponry:longbow_diamond:*=reskillable:attack|8,reskillable:agility|18
+        spartanweaponry:crossbow_diamond:*=reskillable:attack|18,reskillable:agility|8
+        spartanweaponry:throwing_knife_diamond:*=reskillable:agility|18
+        spartanweaponry:throwing_axe_diamond:*=reskillable:agility|18
+        spartanweaponry:javelin_diamond:*=reskillable:agility|18
+        spartanweaponry:boomerang_diamond:*=reskillable:agility|18
+        spartanweaponry:battleaxe_diamond:*=reskillable:attack|18
+        spartanweaponry:mace_diamond:*=reskillable:attack|18
+        spartanweaponry:glaive_diamond:*=reskillable:attack|18
+        spartanweaponry:staff_diamond:*=reskillable:agility|18
         spartanfire:dagger_dragonbone:*=reskillable:agility|24
         spartanfire:longsword_dragonbone:*=reskillable:attack|24
         spartanfire:katana_dragonbone:*=reskillable:agility|24
@@ -983,15 +982,15 @@ general {
         bountifulbaubles:phantomprism:*=reskillable:magic|69420
         disenchanter:disenchantmenttable:*=reskillable:building|6,reskillable:magic|12
         spartanshields:shield_basic_gold:*=reskillable:defense|2,reskillable:magic|4
-        spartanshields:shield_basic_iron:*=reskillable:defense|8
+        spartanshields:shield_basic_iron:*=reskillable:defense|9
         spartanshields:shield_basic_silver:*=reskillable:defense|4,reskillable:magic|2
         spartanshields:shield_basic_obsidian:*=reskillable:defense|12
-        spartanshields:shield_basic_diamond:*=reskillable:defense|16
+        spartanshields:shield_basic_diamond:*=reskillable:defense|18
         spartanshields:shield_tower_gold:*=reskillable:defense|2,reskillable:magic|4
-        spartanshields:shield_tower_iron:*=reskillable:defense|8
+        spartanshields:shield_tower_iron:*=reskillable:defense|9
         spartanshields:shield_tower_silver:*=reskillable:defense|4,reskillable:magic|2
         spartanshields:shield_tower_obsidian:*=reskillable:defense|12
-        spartanshields:shield_tower_diamond:*=reskillable:defense|16
+        spartanshields:shield_tower_diamond:*=reskillable:defense|18
         aquaculture:neptunium_pickaxe:*=reskillable:mining|10
         aquaculture:neptunium_shovel:*=reskillable:gathering|10
         aquaculture:neptunium_axe:*=reskillable:gathering|10
@@ -1013,7 +1012,7 @@ general {
         variedcommodities:golden_skirt:*=reskillable:defense|2,reskillable:magic|4
         variedcommodities:iron_skirt:*=reskillable:defense|8
         variedcommodities:diamond_skirt:*=reskillable:defense|16
-        wearablebackpacks:backpack:*=reskillable:agility|3
+        wearablebackpacks:backpack:*=reskillable:agility|4
         ebwizardry:magic_wand:*=reskillable:magic|3
         ebwizardry:apprentice_wand:*=reskillable:magic|6
         ebwizardry:advanced_wand:*=reskillable:magic|12
@@ -1178,7 +1177,7 @@ general {
         forgottenitems:golem_chestplate:*=reskillable:defense|24,reskillable:agility|20
         forgottenitems:golem_leggings:*=reskillable:defense|24,reskillable:agility|20
         forgottenitems:golem_boots:*=reskillable:defense|24,reskillable:agility|20
-        mowziesmobs:grant_suns_blessing:*=reskillable:attack|10,reskillable:magic|25
+        mowziesmobs:grant_suns_blessing:*=reskillable:magic|24
         mowziesmobs:barakoa_mask_fury:*=reskillable:attack|5
         mowziesmobs:barakoa_mask_fear:*=reskillable:agility|5
         mowziesmobs:barakoa_mask_rage:*=reskillable:mining|5
