--- a/config/carryon.cfg
+++ b/config/carryon.cfg
@@ -25,7 +25,7 @@ general {
         D:entitySlownessMultiplier=1.0
 
         # If the front of the Tile Entities should face the player or should face outward
-        B:facePlayer=false
+        B:facePlayer=true
 
         # Larger Entities slow down the player more
         B:heavyEntities=true
@@ -120,6 +120,7 @@ general {
             defiledlands:*
             notreepunching:fire_pit
             comforts:*
+            mocreatures:*
          >
 
         # Entities that cannot have other entities stacked on top of them
