--- a/config/cookingforblockheads.cfg
+++ b/config/cookingforblockheads.cfg
@@ -25,17 +25,17 @@ general {
     B:"Disallow Oven Automation"=false
 
     # Enabling this will make the kitchen counters have twice as much inventory space.
-    B:"Large Counters"=false
+    B:"Large Counters"=true
 
     # The cooking time multiplier for the cooking oven. Higher values means it will take longer.
     # Min: 0.25
     # Max: 9.0
-    D:"Oven Cook Time Multiplier"=1.0
+    D:"Oven Cook Time Multiplier"=0.6
 
     # The fuel multiplier for the cooking oven. Higher values means fuel lasts longer, 1.0 is furnace default.
     # Min: 0.10000000149011612
     # Max: 2.0
-    D:"Oven Fuel Time Multiplier"=0.33000001311302185
+    D:"Oven Fuel Time Multiplier"=1
 
     # Set this to true if you'd like the sink to require water to be piped in, instead of providing infinite of it.
     B:"Sink Requires Water"=false
