--- a/config/dsurround/dsurround.cfg
+++ b/config/dsurround/dsurround.cfg
@@ -96,7 +96,7 @@ commands {
 
 effects {
     # Controls display of damage pop-offs when an entity is damaged/healed [default: true]
-    B:"Damage Popoffs"=false
+    B:"Damage Popoffs"=true
 
     # Enable/disable water depth particle effect [default: false]
     B:"Disable Water Suspend Particles"=false
@@ -129,7 +129,7 @@ effects {
     B:Footprints=true
 
     # Display random power word on critical hit [default: true]
-    B:"Show Crit Words"=true
+    B:"Show Crit Words"=false
 
     # Show player breath in cold weather and underwater [default: true]
     B:"Show Frost Breath"=true
