--- a/config/apotheosis/deadly.cfg
+++ b/config/apotheosis/deadly.cfg
@@ -256,6 +256,9 @@ general {
     I:"familiarfauna:familiarfauna.turkey"=1
 
     #  [range: 0 ~ 50, default: 1]
+    I:"hunterillager:hunter_illager"=1
+
+    #  [range: 0 ~ 50, default: 1]
     I:"iceandfire:amphithere"=1
 
     #  [range: 0 ~ 50, default: 1]
