--- a/config/apotheosis/enchantability.cfg
+++ b/config/apotheosis/enchantability.cfg
@@ -1,11 +1,13 @@
 # Configuration file
 
 "enchantability - armor" {
-    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 15]
     I:APIARIST_ARMOR=15
 
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 8]
     I:ARCTIC=8
+
+    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 30]
+    I:BANDIT=30
 
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 15]
     I:BARAKOA_MASK=15
@@ -103,6 +105,9 @@
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 15]
     I:LEATHER=15
 
+    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 35]
+    I:LEGENDARY_BANDIT=35
+
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 0]
     I:Lifebelt=0
     I:MITHRIL=20
@@ -128,11 +133,17 @@
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 0]
     I:RESPIRATOR=0
 
+    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 30]
+    I:ROYAL=30
+
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 5]
     I:"Red Deathworm"=5
 
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 25]
     I:SAGE=20
+
+    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 25]
+    I:SAMURAI=25
 
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 15]
     I:SILK=15
@@ -174,6 +185,9 @@
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 20]
     I:Silver=20
     I:THAUMIUM=25
+
+    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 15]
+    I:TORO=15
     I:VOID=10
     I:VOIDROBE=10
 
@@ -308,7 +322,7 @@
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 5]
     I:GIANTSTONE=5
 
-    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 40]
+    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 22]
     I:GOLD=40
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 8]
