--- a/config/apotheosis/names.cfg
+++ b/config/apotheosis/names.cfg
@@ -1,12 +1,15 @@
 # Configuration file
 
 armors {
-    # A list of material-based prefix names for the given armor material. May be empty. [default: ]
     S:APIARIST_ARMOR <
      >
 
     # A list of material-based prefix names for the given armor material. May be empty. [default: ]
     S:ARCTIC <
+     >
+
+    # A list of material-based prefix names for the given armor material. May be empty. [default: ]
+    S:BANDIT <
      >
 
     # A list of material-based prefix names for the given armor material. May be empty. [default: ]
@@ -165,6 +168,10 @@ armors {
      >
 
     # A list of material-based prefix names for the given armor material. May be empty. [default: ]
+    S:LEGENDARY_BANDIT <
+     >
+
+    # A list of material-based prefix names for the given armor material. May be empty. [default: ]
     S:Lifebelt <
      >
     S:MITHRIL <
@@ -199,11 +206,19 @@ armors {
      >
 
     # A list of material-based prefix names for the given armor material. May be empty. [default: ]
+    S:ROYAL <
+     >
+
+    # A list of material-based prefix names for the given armor material. May be empty. [default: ]
     S:"Red Deathworm" <
      >
 
     # A list of material-based prefix names for the given armor material. May be empty. [default: ]
     S:SAGE <
+     >
+
+    # A list of material-based prefix names for the given armor material. May be empty. [default: ]
+    S:SAMURAI <
      >
 
     # A list of material-based prefix names for the given armor material. May be empty. [default: ]
@@ -260,6 +275,10 @@ armors {
     S:Silver <
      >
     S:THAUMIUM <
+     >
+
+    # A list of material-based prefix names for the given armor material. May be empty. [default: ]
+    S:TORO <
      >
     S:VOID <
      >
