--- a/config/infernalmobs.cfg
+++ b/config/infernalmobs.cfg
@@ -212,6 +212,7 @@ entitiesalwaysinfernal {
     B:gorgon=false
     B:grottol=false
     B:hoarder=false
+    B:hunterillager.HunterIllager=false
     B:if_hydra=false
     B:if_troll=false
     B:illager_king=false
@@ -241,6 +242,9 @@ entitiesalwaysinfernal {
     B:"quark:pirate"=false
     B:siren=false
     B:stymphalianbird=false
+    B:toroquest_mage=false
+    B:toroquest_orc=false
+    B:toroquest_sentry=false
     B:treant=false
     B:trumpetskeleton.TrumpetSkeleton=false
     B:twilightforest.armored_giant=false
@@ -703,6 +707,7 @@ permittedentities {
     B:gorgon=true
     B:grottol=true
     B:hoarder=true
+    B:hunterillager.HunterIllager=true
     B:if_hydra=true
     B:if_troll=true
     B:illager_king=true
@@ -732,6 +737,9 @@ permittedentities {
     B:"quark:pirate"=true
     B:siren=true
     B:stymphalianbird=true
+    B:toroquest_mage=true
+    B:toroquest_orc=true
+    B:toroquest_sentry=true
     B:treant=true
     B:trumpetskeleton.TrumpetSkeleton=true
     B:twilightforest.armored_giant=true
