--- a/config/ZombieAwareness/MobLists.cfg
+++ b/config/ZombieAwareness/MobLists.cfg
@@ -139,6 +139,7 @@ tickable_entities {
     B:grue=false
     B:herma=false
     B:hoarder=false
+    B:hunterillager.HunterIllager=false
     B:if_hydra=false
     B:if_troll=false
     B:illager_king=false
@@ -197,6 +198,21 @@ tickable_entities {
     B:sylph=false
     B:tarantula=false
     B:thresher=false
+    B:toroquest_bandit_lord=false
+    B:toroquest_bas=true
+    B:toroquest_construct=false
+    B:toroquest_construct_quest=false
+    B:toroquest_grave_titan=true
+    B:toroquest_mage=false
+    B:toroquest_monolitheye=false
+    B:toroquest_orc=false
+    B:toroquest_pig_lord=false
+    B:toroquest_sentry=false
+    B:toroquest_spider_lord=true
+    B:toroquest_vampire_bat=false
+    B:toroquest_wolf_raider=false
+    B:toroquest_zombie_raider=true
+    B:toroquest_zombie_villager_raider=true
     B:treant=false
     B:tremor=false
     B:triffid=false
