--- a/config/corpsecomplex.cfg
+++ b/config/corpsecomplex.cfg
@@ -256,7 +256,7 @@ respawning {
 
     # A list of items to give players on respawn. The format is modid:item_name;stacksize;metadata.
     S:"Respawn Items" <
-        questbook:itemquestboo
+        questbook:itemquestbook
      >
 
     # Set to true to enable a craftable return scroll that teleports players to their death location
